--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             setTimeout(function() {
-                var serverStatus = "yes"; // يمكن تغيير هذه الكلمة إلى "no" لتغيير السلوك
+                var serverStatus = "no"; // يمكن تغيير هذه الكلمة إلى "no" لتغيير السلوك
 
                 if (serverStatus.toLowerCase() === "yes") {
                     if (navigator.onLine) {
